# krx-clearlog

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: helpers.py  home.py  main.py
app/pages/: 1_Paste_Upload.py  2_Lookup.py  3_Inspect.py  4_Schemas.py  5_Admin.py
docs/: INSTALL.md
krx_parser/: __init__.py  exceptions.py  frame.py  parser.py  registry.py  schema.py  settings.py
krx_parser/codes/: __init__.py  enums.py
krx_parser/db/: __init__.py  engine.py  models.py  repository.py  serialize.py
krx_parser/schemas/: TCSMIH41301.yaml  TCSMIH42101.yaml  TCSMIH42201.yaml  TCSMIH42301.yaml  TCSMIH42401.yaml  TCSMIH43101.yaml  TCSMIH43201.yaml  TCSMIH43301.yaml  TCSMIH43401.yaml  TCSMIH43501.yaml  TCSMIH43601.yaml
samples/: README.md
shl/: install.sh  start.sh  stop.sh
spec/: codes.md  design.md  enforcement_rules.md  messages.md  regulation.md
tests/: builder.py  conftest.py  test_frame.py  test_parser.py  test_repository.py
